--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="windowManager.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="map.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tools.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="windowManager.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="map.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
