--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="map.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="hud.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="customMath.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tools.h">
@@ -36,6 +42,12 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="map.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="hud.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="customMath.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
