--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="hud.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="map.c" />
+    <ClCompile Include="mouseManager.c" />
     <ClCompile Include="tools.c" />
     <ClCompile Include="windowManager.c" />
   </ItemGroup>
@@ -144,6 +145,7 @@
     <ClInclude Include="customMath.h" />
     <ClInclude Include="hud.h" />
     <ClInclude Include="map.h" />
+    <ClInclude Include="mouseManager.h" />
     <ClInclude Include="tools.h" />
     <ClInclude Include="windowManager.h" />
   </ItemGroup>
