--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="customMath.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="mouseManager.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tools.h">
@@ -48,6 +51,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="customMath.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="mouseManager.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
