--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="mouseManager.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="keyboardManager.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tools.h">
@@ -54,6 +57,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="mouseManager.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="keyboardManager.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
