--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj
@@ -134,6 +134,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="customMath.c" />
+    <ClCompile Include="game.c" />
     <ClCompile Include="hud.c" />
     <ClCompile Include="keyboardManager.c" />
     <ClCompile Include="main.c" />
@@ -144,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="customMath.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="hud.h" />
     <ClInclude Include="keyboardManager.h" />
     <ClInclude Include="map.h" />
