--- a/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
+++ b/A-Star-Algorithm/A-Star-Algorithm/A-Star-Algorithm.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="keyboardManager.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="game.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tools.h">
@@ -60,6 +63,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="keyboardManager.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
